Update APK download link in index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ a:hover {opacity: 0.8;}
   <h1>🎵 My Music App</h1>
   <p>Offline music player with powerful features</p>
 
-  <a href="app-release.apk" download>
+  <a href="Aniquen (2).apk" download>
     ⬇ Download APK
   </a>
 </div>
